server-tools/docker-hook/deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-hook
  labels:
    app: docker-hook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-hook
  template:
    metadata:
      labels:
        app: docker-hook
    spec:
      containers:
      - name: docker-hook
        image: lcr.lh/docker-hook
        ports:
        - containerPort: 8555
