server-tools/docker-hook/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: docker-hook
  labels:
    app: docker-hook
spec:
  ports:
  - name: docker-hook
    port: 8555
  selector:
    app: docker-hook
